[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=2]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main/ui/level-select/HookableGradeLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=5]
[ext_resource path="res://src/main/ui/level-select/level-info-panel.gd" type="Script" id=6]
[ext_resource path="res://src/main/ui/level-select/level-select.gd" type="Script" id=7]
[ext_resource path="res://src/main/ui/level-select/level-description-panel.gd" type="Script" id=8]
[ext_resource path="res://src/main/ui/level-select/level-buttons.gd" type="Script" id=9]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=10]
[ext_resource path="res://src/main/ui/swipe-container.gd" type="Script" id=11]
[ext_resource path="res://src/main/ui/MoneyLabel.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/main/ui/level-select/LevelSelectButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/main/ui/level-select/grade-labels.gd" type="Script" id=14]
[ext_resource path="res://src/main/ui/level-select/WorldSelectButton.tscn" type="PackedScene" id=15]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1014.0
margin_bottom = 486.0
size_flags_vertical = 3
follow_focus = true
script = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1014.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 256
custom_constants/margin_top = 150
custom_constants/margin_left = 256
custom_constants/margin_bottom = 150

[node name="LevelButtons" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 256.0
margin_top = 150.0
margin_right = 758.0
margin_bottom = 336.0
custom_constants/separation = 5
script = ExtResource( 9 )
LevelSelectButtonScene = ExtResource( 13 )
WorldSelectButtonScene = ExtResource( 15 )

[node name="GradeLabels" type="Control" parent="VBoxContainer/ScrollContainer/MarginContainer"]
margin_left = 256.0
margin_top = 150.0
margin_right = 758.0
margin_bottom = 336.0
mouse_filter = 2
script = ExtResource( 14 )
GradeLabelScene = ExtResource( 4 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 490.0
margin_right = 1014.0
margin_bottom = 590.0
rect_min_size = Vector2( 0, 100 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/HBoxContainer"]
margin_right = 75.0
margin_bottom = 100.0

[node name="Settings" type="Button" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
margin_right = 75.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
theme = ExtResource( 5 )
shortcut_in_tooltip = false
shortcut = ExtResource( 2 )
text = "Settings"

[node name="ShortcutHelper" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Settings" instance=ExtResource( 1 )]
action = "ui_cancel"

[node name="Quit" type="Button" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 75.0
margin_bottom = 100.0
size_flags_vertical = 3
theme = ExtResource( 5 )
shortcut_in_tooltip = false
text = "Quit"

[node name="Description" type="Panel" parent="VBoxContainer/Control/HBoxContainer"]
margin_left = 79.0
margin_right = 544.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 10 )
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/HBoxContainer/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Control/HBoxContainer/Description/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 445.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 5 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Panel" parent="VBoxContainer/Control/HBoxContainer"]
margin_left = 548.0
margin_right = 1014.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 10 )
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/HBoxContainer/Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/Control/HBoxContainer/Info/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 446.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 5 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 3 )]

[node name="MoneyLabel" parent="." instance=ExtResource( 12 )]
[connection signal="button_added" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/ScrollContainer/MarginContainer/GradeLabels" method="_on_LevelButtons_button_added"]
[connection signal="locked_level_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Info" method="_on_LevelButtons_locked_level_selected"]
[connection signal="locked_level_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Description" method="_on_LevelButtons_locked_level_selected"]
[connection signal="overall_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Info" method="_on_LevelButtons_overall_selected"]
[connection signal="overall_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Description" method="_on_LevelButtons_overall_selected"]
[connection signal="unlocked_level_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Info" method="_on_LevelButtons_unlocked_level_selected"]
[connection signal="unlocked_level_selected" from="VBoxContainer/ScrollContainer/MarginContainer/LevelButtons" to="VBoxContainer/Control/HBoxContainer/Description" method="_on_LevelButtons_unlocked_level_selected"]
[connection signal="pressed" from="VBoxContainer/Control/HBoxContainer/VBoxContainer/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/HBoxContainer/VBoxContainer/Quit" to="SettingsMenu" method="_on_Quit_pressed"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_quit_pressed"]
